--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -25,7 +26,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	runtimeOnly('org.postgresql:postgresql')
-
+	// bootstrap dependencies
+//	implementation group: 'org.webjars', name: 'bootstrap', version: '4.0.0-2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
